# rust_mail

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  ci.yml
.sqlx/: query-68a00cae18e40dc76ffea61dfc0ea84d8cb09502b24c11dbb8d403419899dfd1.json
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
